--- a/styles/output/webview-generic.css
+++ b/styles/output/webview-generic.css
@@ -2030,7 +2030,6 @@ blockquote {
 .hljs-ln-code {
   font-size: 1.2rem;
   padding-right: 10px;
-  text-align: right;
   vertical-align: top;
 }
 
@@ -2038,6 +2037,7 @@ blockquote {
   font-size: 1.2rem;
   font-family: Courier Prime, monospace;
   padding-left: 0.5rem;
+  text-align: left;
 }
 
 .primary-function, .secondary-function {
